# btkit

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
btkit/: cli.py
btkit/analysis/: charts.py  dashboard.py  metrics.py  pnl_validator.py
btkit/analysis/api/: app.py  db.py  db_input.py
btkit/analysis/assets/: dashAgGridComponentFunctions.js  responsive.css
btkit/analysis/static/: index.html
btkit/audit/: report.py  runner.py  schema.py
btkit/audit/rules/: phase1_iv.py  phase2_delta.py  phase3_coverage.py  phase4_integrity.py
btkit/backtest/: _util.py  engine.py  entry.py  exit.py  matrix_runner.py  pnl.py
btkit/db/: input_db.py  merger.py  output_db.py
btkit/pipeline/: builder.py  greeks.py  indicators.py
btkit/strategy/: definition.py  loader.py  matrix.py
btkit/study/: __init__.py  definition.py  expander.py  loader.py  merger.py  runner.py
docs/: audit.md  classes.md  constraints.md  dashboard.md  database.md  exit_liquidity_fix.md  expiry_settlement.md  fill_price_and_costs.md  index.md  indicators.md  mvp.md  strategy.md  study.md
scripts/: benchmark_backtest.py  compare_positions.py  dump_positions.py  migrate_option_greeks_index.py  serve_ui.py  test_backtest.py  test_ingest.py  test_loader.py
src/btkit/: __init__.py  black76.py  broker.py  bt_broker.py  bt_data_stream.py  bt_instrument.py  bt_instrument_details.py  bt_options_chain.py  bt_strategy.py  data_stream.py  instrument.py  instrument_details.py  logger.py  option_chain.py  order.py  position.py  postproc_tool.py  strategy.py
src/btkit/utils/: build_database.py  combine_results.py  matrix_runner.py  post_processing.py  precompute_greeks.py
tests/: conftest.py
tests/fixtures/: indicators.py
tests/fixtures/strategies/: exit_condition.yaml  exit_dte.yaml  exit_expiry.yaml  exit_sl.yaml  exit_tp.yaml  indicator_conditions.yaml  iron_condor.yaml  (+2 more)
tests/integration/: test_conditional_selection.py  test_engine.py  test_entry_scanner.py
tests/unit/: test_asof_indicator_join.py  test_audit.py  test_black76.py  test_builder_routing.py  test_definition.py  test_entry_indicators.py  test_entry_ts_alignment.py  test_explore_api.py  test_fill_range.py  test_greeks_asof.py  test_indicator_context.py  test_iv_stepped_delta.py  test_leg_out.py  test_loader.py  test_metrics.py  test_no_reentry_after_loss.py  test_none_sweep.py  test_output_db_study.py  test_output_merger.py  test_parse_condition.py  test_pnl.py  test_roll.py  test_settlement_marks.py  test_stepped_leg.py  test_study_definition.py  test_study_expander.py  test_targets.py  test_tick_round.py  test_vega_exit.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  ErrorBoundary.tsx  index.css
(+32 files in other folders)
