[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btkit"
version = "2.0.0"
description = "Vectorized options backtesting framework"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10",
    "polars>=0.20",
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "numba>=0.59",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
viz = [
    "plotly>=5.0",
    "dash>=2.14",
    "dash-ag-grid>=31.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
btkit = "btkit.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["btkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "W"]
ignore = [
    "B008",   # function call in default argument (Typer pattern)
    "N803",   # argument name should be lowercase (numba kernels use F, K, T)
    "N806",   # variable in function should be lowercase (same)
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
